tests/syntax_error/global_missing_type_and_value.jou
global thingy  # Error: expected ':' and a type after it (global thingy: int) or '=' and a value after it (global thingy = 123), got end of line
